Bug 1455950 - Increased contrast on dark theme UI text links. r=dao
MozReview-Commit-ID: Kg4opEGVR4H

UltraBlame original commit: 8579efe6135a275fe5c29b2c7970cb0cec4f88fd

--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -23,6 +23,11 @@
 }
 
 
+:root[lwt-popup-brighttext] panel .text-link {
+  color: #45a1ff;
+}
+
+
 
 #navigator-toolbox::after {
   content: "";
